--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Temperature Hot</title>
+    <title>Get Temperature information</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -13,7 +13,7 @@
         body {
             background: url(images/bg-image.jpg) no-repeat;
             background-size: cover;
-            height: 100vh;
+            height: 100vh;            
         }
     </style>
 </head>
